Argocd-instances/application/Deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: dotnet-app
  labels:
    app: dotnet-app
    app.kubernetes.io/component: dotnet-app
    app.kubernetes.io/instance: dotnet-app
    app.kubernetes.io/name: dotnet-app
    app.kubernetes.io/part-of: dotnet-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dotnet-app
  template:
    metadata:
      labels:
        app: dotnet-app
        deployment: dotnet-app
    spec:
      containers:
        - name: dotnet-app
          image: 'quay.io/thason/hello-app:v7'
          resources:
            limits:
              cpu: 250m
              memory: 256Mi
          imagePullPolicy: Always
      restartPolicy: Always
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 1
