Argocd-instances/application/Service.yaml
kind: Service
apiVersion: v1
metadata:
  name: dotnet-app
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
  selector:
    app: dotnet-app
    deployment: dotnet-app
