Argocd-instances/application/Route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: dotnet-app
spec:
  to:
    kind: Service
    name: dotnet-app
    weight: 100
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
